@@ -132,6 +132,7 @@ Poeple/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		CocosNode actions: patches that makes the actions run MUCH faster
 		Author of the transformations caches. world2local, local2world runs faster.
 		fixes for Repeat action. It doesn't skip integer values
+		CocosNode#children is an explicit property
 	* yarrington: patches for Director
 
 
